fix: Align the hearts' position and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,6 @@ body {
 
 .header {
   font-size: 2em;
-  margin-bottom: 0;
   text-shadow: 0px 3px 0px #b2a98f;
 }
 
@@ -44,22 +43,21 @@ body {
     font-size: 1rem;
 }
 
+.lives-wrapper {
+  margin-bottom: -50px;
+}
+
 .lives-wrapper li {
   display: inline-block;
   list-style: none;
   font-size: 1.5rem;
-  padding: 2px;
+  padding: 0.25rem;
   color: #980505;
 }
 
-.lives-wrapper li {
-  font-size: 1.625rem;
-  padding: 0.1875rem;
-}
-
 .lost {
-  -webkit-animation: grey-out 0.3s linear 2 alternate;
-  animation: grey-out 0.3s linear 2 alternate;
+  -webkit-animation: grey-out 0.6s linear 2 alternate;
+  animation: grey-out 0.6s linear 2 alternate;
   color: #a9a9a9;
 }
 
